--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -11,15 +11,25 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/iconWeatherFragment"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:tint="@color/white"
-            android:src="@drawable/wi_day_cloudy_high"/>
+            android:visibility="gone"/>
         <TextView
+            android:id="@+id/temperatureWeatherFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:textColor="@color/white"
-            android:text="@string/hello_blank_fragment" />
+            android:visibility="gone" />
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loadingWeatherFragment"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:indeterminate="true"
+            android:layout_gravity="center"
+            app:indicatorColor="@color/white"
+            app:indicatorSize="32dp" />
     </LinearLayout>
 </FrameLayout>
